# go-tree-sitter-bazel

./: .bazelrc  .gitignore  .markdownlint.json  BUILD.bazel  BUILD.upstream  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MODULE.bazel  Makefile  README.md  extensions.bzl  parser_test.go.patch  print_sha.bash  tree_sitter.go.patch  version.bzl
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/scripts/: release_prep.bash
.github/workflows/: build.yml  ci.yml  release.yml  upstream-check.yml
