"""Main BUILD file for go_tree_sitter Bazel module"""

load("@rules_go//go:def.bzl", "go_test")

alias(
    name = "go_tree_sitter",
    actual = "@go_tree_sitter_raw//:go_tree_sitter",
    visibility = ["//visibility:public"],
)

alias(
    name = "go-tree-sitter",
    actual = "@go_tree_sitter_raw//:go_tree_sitter",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go-tree-sitter_test",
    srcs = [
        "@go_tree_sitter_raw//:edit_test.go",
        "@go_tree_sitter_raw//:language_test.go",
        "@go_tree_sitter_raw//:lookahead_iterator_test.go",
        "@go_tree_sitter_raw//:node_test.go",
        "@go_tree_sitter_raw//:parser_test.go",
        "@go_tree_sitter_raw//:query_test.go",
        "@go_tree_sitter_raw//:tree_cursor_test.go",
        "@go_tree_sitter_raw//:tree_test.go",
    ],
    deps = [
        ":go_tree_sitter",
        "@com_github_stretchr_testify//assert",
        "@com_github_tree_sitter_tree_sitter_c//bindings/go",
        "@com_github_tree_sitter_tree_sitter_cpp//bindings/go",
        "@com_github_tree_sitter_tree_sitter_embedded_template//bindings/go",
        "@com_github_tree_sitter_tree_sitter_go//bindings/go",
        "@com_github_tree_sitter_tree_sitter_html//bindings/go",
        "@com_github_tree_sitter_tree_sitter_java//bindings/go",
        "@com_github_tree_sitter_tree_sitter_javascript//bindings/go",
        "@com_github_tree_sitter_tree_sitter_json//bindings/go",
        "@com_github_tree_sitter_tree_sitter_php//bindings/go",
        "@com_github_tree_sitter_tree_sitter_python//bindings/go",
        "@com_github_tree_sitter_tree_sitter_ruby//bindings/go",
        "@com_github_tree_sitter_tree_sitter_rust//bindings/go",
    ],
)
