""" Bazel go_tree_sitter bindings """

module(
    name = "go_tree_sitter",
    version = "0.25.0",
    bazel_compatibility = [">=7.7.0"],
    compatibility_level = 1,
)

bazel_dep(name = "rules_go", version = "0.58.2")
bazel_dep(name = "gazelle", version = "0.45.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")

# Extension to fetch go_tree_sitter source code
go_tree_sitter_source = use_extension(":extensions.bzl", "go_tree_sitter_source_code")
use_repo(go_tree_sitter_source, "go_tree_sitter_raw")

# Go dependencies for the bindings
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "@go_tree_sitter_raw//:go.mod")
use_repo(
    go_deps,
    "com_github_mattn_go_pointer",
    "com_github_stretchr_testify",
    "com_github_tree_sitter_tree_sitter_c",
    "com_github_tree_sitter_tree_sitter_cpp",
    "com_github_tree_sitter_tree_sitter_embedded_template",
    "com_github_tree_sitter_tree_sitter_go",
    "com_github_tree_sitter_tree_sitter_html",
    "com_github_tree_sitter_tree_sitter_java",
    "com_github_tree_sitter_tree_sitter_javascript",
    "com_github_tree_sitter_tree_sitter_json",
    "com_github_tree_sitter_tree_sitter_php",
    "com_github_tree_sitter_tree_sitter_python",
    "com_github_tree_sitter_tree_sitter_ruby",
    "com_github_tree_sitter_tree_sitter_rust",
)
