""" Bazel go_tree_sitter bindings """

module(
    name = "go_tree_sitter",
    version = "0.25.0",
    bazel_compatibility = [">=7.7.0"],
    compatibility_level = 1,
)

bazel_dep(name = "rules_go", version = "0.58.2")
bazel_dep(name = "gazelle", version = "0.45.0")
# bazel_dep(name = "bazel_skylib", version = "1.8.2")

bazel_dep(name = "buildifier_prebuilt", version = "6.1.0", dev_dependency = True)

# Fetch go_tree_sitter source code
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Pinned commit from go_tree_sitter 0.25 branch (until v0.25.0 tag is released)
# Commit: https://github.com/tree-sitter/go-tree-sitter/commit/56cc6ef292d5d6a755994d3cefadc1624097fbfb
GO_TREE_SITTER_COMMIT = "56cc6ef292d5d6a755994d3cefadc1624097fbfb"

# Run print_sha.bash to get this
GO_TREE_SITTER_INTEGRITY = "sha256-jzEoZlYDCtzOiKTGLioxCJDMoS+f7MR1xDVBKlZlfYI="

http_archive(
    name = "go_tree_sitter_raw",
    build_file = "//:BUILD.upstream",
    integrity = GO_TREE_SITTER_INTEGRITY,
    patch_strip = 0,
    patches = ["//:tree_sitter.go.patch"],
    strip_prefix = "go-tree-sitter-{}".format(GO_TREE_SITTER_COMMIT),
    url = "https://github.com/tree-sitter/go-tree-sitter/archive/{}.tar.gz".format(GO_TREE_SITTER_COMMIT),
)

# Go dependencies for the bindings
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "@go_tree_sitter_raw//:go.mod")
use_repo(
    go_deps,
    "com_github_mattn_go_pointer",
    "com_github_stretchr_testify",
    "com_github_tree_sitter_tree_sitter_c",
    "com_github_tree_sitter_tree_sitter_cpp",
    "com_github_tree_sitter_tree_sitter_embedded_template",
    "com_github_tree_sitter_tree_sitter_go",
    "com_github_tree_sitter_tree_sitter_html",
    "com_github_tree_sitter_tree_sitter_java",
    "com_github_tree_sitter_tree_sitter_javascript",
    "com_github_tree_sitter_tree_sitter_json",
    "com_github_tree_sitter_tree_sitter_php",
    "com_github_tree_sitter_tree_sitter_python",
    "com_github_tree_sitter_tree_sitter_ruby",
    "com_github_tree_sitter_tree_sitter_rust",
)
