""" Bazel go_tree_sitter bindings """

module(
    name = "go_tree_sitter",
    version = "0.25.0",
    bazel_compatibility = [">=7.7.0"],
    compatibility_level = 1,
)

bazel_dep(name = "rules_go", version = "0.58.2")
bazel_dep(name = "gazelle", version = "0.45.0")

# Fetch go_tree_sitter source code
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Pinned commit from go_tree_sitter 0.25 branch (until v0.25.0 tag is released)
# Commit: https://github.com/tree-sitter/go-tree-sitter/commit/56cc6ef292d5d6a755994d3cefadc1624097fbfb
GO_TREE_SITTER_COMMIT = "56cc6ef292d5d6a755994d3cefadc1624097fbfb"

# Run print_sha.bash to get this
GO_TREE_SITTER_INTEGRITY = "sha256-jzEoZlYDCtzOiKTGLioxCJDMoS+f7MR1xDVBKlZlfYI="

http_archive(
    name = "go_tree_sitter_raw",
    build_file = "//:BUILD.upstream",
    integrity = GO_TREE_SITTER_INTEGRITY,
    patch_strip = 0,
    patches = [
        "//:tree_sitter.go.patch",
        "//:parser_test.go.patch",
    ],
    strip_prefix = "go-tree-sitter-{}".format(GO_TREE_SITTER_COMMIT),
    url = "https://github.com/tree-sitter/go-tree-sitter/archive/{}.tar.gz".format(GO_TREE_SITTER_COMMIT),
)

# Go dependencies for the bindings
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "@go_tree_sitter_raw//:go.mod")
use_repo(
    go_deps,
    "com_github_mattn_go_pointer",
    "com_github_stretchr_testify",
)

go_deps_dev = use_extension("@gazelle//:extensions.bzl", "go_deps", dev_dependency = True)

# Patch tree-sitter language bindings to include C sources and modify CGO includes
# Simple parsers (parser.c only)
go_deps_dev.module_override(
    patch_strip = 1,
    patches = ["@go_tree_sitter//third_party/patches:tree-sitter-c.patch"],
    path = "github.com/tree-sitter/tree-sitter-c",
)
go_deps_dev.module_override(
    patch_strip = 1,
    patches = ["@go_tree_sitter//third_party/patches:tree-sitter-go.patch"],
    path = "github.com/tree-sitter/tree-sitter-go",
)
go_deps_dev.module_override(
    patch_strip = 1,
    patches = ["@go_tree_sitter//third_party/patches:tree-sitter-java.patch"],
    path = "github.com/tree-sitter/tree-sitter-java",
)
go_deps_dev.module_override(
    patch_strip = 1,
    patches = ["@go_tree_sitter//third_party/patches:tree-sitter-json.patch"],
    path = "github.com/tree-sitter/tree-sitter-json",
)
go_deps_dev.module_override(
    patch_strip = 1,
    patches = ["@go_tree_sitter//third_party/patches:tree-sitter-embedded-template.patch"],
    path = "github.com/tree-sitter/tree-sitter-embedded-template",
)

# Parsers with scanner (parser.c + scanner.c)
go_deps_dev.module_override(
    patch_strip = 1,
    patches = ["@go_tree_sitter//third_party/patches:tree-sitter-cpp.patch"],
    path = "github.com/tree-sitter/tree-sitter-cpp",
)
go_deps_dev.module_override(
    patch_strip = 1,
    patches = ["@go_tree_sitter//third_party/patches:tree-sitter-javascript.patch"],
    path = "github.com/tree-sitter/tree-sitter-javascript",
)
go_deps_dev.module_override(
    patch_strip = 1,
    patches = ["@go_tree_sitter//third_party/patches:tree-sitter-python.patch"],
    path = "github.com/tree-sitter/tree-sitter-python",
)
go_deps_dev.module_override(
    patch_strip = 1,
    patches = ["@go_tree_sitter//third_party/patches:tree-sitter-ruby.patch"],
    path = "github.com/tree-sitter/tree-sitter-ruby",
)
go_deps_dev.module_override(
    patch_strip = 1,
    patches = ["@go_tree_sitter//third_party/patches:tree-sitter-html.patch"],
    path = "github.com/tree-sitter/tree-sitter-html",
)
go_deps_dev.module_override(
    patch_strip = 1,
    patches = ["@go_tree_sitter//third_party/patches:tree-sitter-rust.patch"],
    path = "github.com/tree-sitter/tree-sitter-rust",
)

# Special case: PHP has both php/ and php_only/ directories
go_deps_dev.module_override(
    patch_strip = 1,
    patches = ["@go_tree_sitter//third_party/patches:tree-sitter-php.patch"],
    path = "github.com/tree-sitter/tree-sitter-php",
)
use_repo(
    go_deps_dev,
    "com_github_tree_sitter_tree_sitter_c",
    "com_github_tree_sitter_tree_sitter_cpp",
    "com_github_tree_sitter_tree_sitter_embedded_template",
    "com_github_tree_sitter_tree_sitter_go",
    "com_github_tree_sitter_tree_sitter_html",
    "com_github_tree_sitter_tree_sitter_java",
    "com_github_tree_sitter_tree_sitter_javascript",
    "com_github_tree_sitter_tree_sitter_json",
    "com_github_tree_sitter_tree_sitter_php",
    "com_github_tree_sitter_tree_sitter_python",
    "com_github_tree_sitter_tree_sitter_ruby",
    "com_github_tree_sitter_tree_sitter_rust",
)
